--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -314,6 +314,14 @@ background_opacity: 0.8
 #  program: /bin/bash
 #  args:
 #    - --login
+# other ideas:
+#https://github.com/alacritty/alacritty/issues/1672
+#args:
+#- -c
+#- cd /tmp && exec zsh
+#args:
+#- -c
+#- cd ~/Documents && exec bash
 
 # Startup directory
 #
