--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -100,7 +100,7 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: Noto Sans Mono Nerd Font
+    family: Roboto Mono Nerd Font
     # The `style` can be specified to pick a specific face.
     style: Regular
 
@@ -110,7 +110,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Noto Sans Mono Nerd Font
+    family: Roboto Mono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -121,7 +121,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Noto Sans Mono Nerd Font
+    family: Roboto Mono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -132,7 +132,7 @@ font:
     #
     # If the bold italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Noto Sans Mono Nerd Font
+    family: Roboto Mono Nerd Font
 
     # The `style` can be specified to pick a specific face.
     style: Bold Italic
@@ -215,34 +215,66 @@ draw_bold_text_with_bright_colors: true
 #     - { index: 20, color: '0x969896' }
 #     - { index: 21, color: '0x282a2e' }
 
-# Colors (Nord)
+# MOAR COLORS ============================================================================
+# https://terminal.sexy/
+
+## Colors (Nord)
+#colors:
+## Default colors
+#primary:
+#background: '0x2E3440'
+#foreground: '0xD8DEE9'
+#
+## Normal colors
+#normal:
+#black:   '0x3B4252'
+#red:     '0xBF616A'
+#green:   '0xA3BE8C'
+#yellow:  '0xEBCB8B'
+#blue:    '0x81A1C1'
+#magenta: '0xB48EAD'
+#cyan:    '0x88C0D0'
+#white:   '0xE5E9F0'
+#
+## Bright colors
+#bright:
+#black:   '0x4C566A'
+#red:     '0xBF616A'
+#green:   '0xA3BE8C'
+#yellow:  '0xEBCB8B'
+#blue:    '0x81A1C1'
+#magenta: '0xB48EAD'
+#cyan:    '0x8FBCBB'
+#white:   '0xECEFF4'
+
 colors:
   # Default colors
   primary:
-    background: '0x2E3440'
-    foreground: '0xD8DEE9'
+    background: '0x151515'
+    foreground: '0xd0d0d0'
 
   # Normal colors
   normal:
-    black:   '0x3B4252'
-    red:     '0xBF616A'
-    green:   '0xA3BE8C'
-    yellow:  '0xEBCB8B'
-    blue:    '0x81A1C1'
-    magenta: '0xB48EAD'
-    cyan:    '0x88C0D0'
-    white:   '0xE5E9F0'
+    black:   '0x151515'
+    red:     '0xfb9fb1'
+    green:   '0xacc267'
+    yellow:  '0xddb26f'
+    blue:    '0x6fc2ef'
+    magenta: '0xe1a3ee'
+    cyan:    '0x12cfc0'
+    white:   '0xd0d0d0'
 
   # Bright colors
   bright:
-    black:   '0x4C566A'
-    red:     '0xBF616A'
-    green:   '0xA3BE8C'
-    yellow:  '0xEBCB8B'
-    blue:    '0x81A1C1'
-    magenta: '0xB48EAD'
-    cyan:    '0x8FBCBB'
-    white:   '0xECEFF4'
+    black:   '0x505050'
+    red:     '0xfb9fb1'
+    green:   '0xacc267'
+    yellow:  '0xddb26f'
+    blue:    '0x6fc2ef'
+    magenta: '0xe1a3ee'
+    cyan:    '0x12cfc0'
+    white:   '0xf5f5f5'
+
 
 # Visual Bell
 #
