--- a/.config/i3/config
+++ b/.config/i3/config
@@ -70,6 +70,7 @@ bindsym $mod+b exec --no-startup-id brave; workspace $ws2
 bindsym $mod+e exec --no-startup-id alacritty -e neomutt #; workspace $ws3
 bindsym $mod+t exec --no-startup-id thunar; workspace $ws4
 bindsym $mod+u exec --no-startup-id blueman-manager; workspace $ws5
+bindsym $mod+q exec --no-startup-id qutebrowser; workspace $ws2
 
 # for keyindicator
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
