--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,6 +6,6 @@
 
 config_version: 2
 settings:
-  url.searchengines:
-    global:
-      DEFAULT: https://duckduckgo.com/?q={}
+  content.register_protocol_handler:
+    https://mail.google.com?extsrc=mailto&url=%25s: true
+    https://mail.tutanota.com#url=%25s: true
