--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,6 +6,7 @@
 
 config_version: 2
 settings:
-  content.register_protocol_handler:
-    https://mail.google.com?extsrc=mailto&url=%25s: true
-    https://mail.tutanota.com#url=%25s: true
+  statusbar.show:
+    global: never
+  tabs.show:
+    global: never
