--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,7 +6,8 @@
 
 config_version: 2
 settings:
-  statusbar.show:
-    global: never
-  tabs.show:
-    global: never
+  aliases:
+    global:
+      q: quit
+      w: session-save
+      wq: quit --save
