--- a/.config/i3/config
+++ b/.config/i3/config
@@ -69,8 +69,8 @@ mode "command" {
 # other keybindings
 bindsym $mod+b exec --no-startup-id brave; workspace $ws2
 bindsym $mod+q exec --no-startup-id qutebrowser; workspace $ws2
-bindsym $mod+p exec --no-startup-id pcmanfm #; workspace $ws3
-bindsym $mod+e exec --no-startup-id alacritty -t neomutt -e neomutt #; workspace $ws4
+bindsym $mod+p exec --no-startup-id pcmanfm
+bindsym $mod+e exec --no-startup-id alacritty -t neomutt -e neomutt
 bindsym $mod+u exec --no-startup-id blueman-manager; workspace $ws4
 
 # for keyindicator
@@ -107,7 +107,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+Shift+v split h
+bindsym $mod+o split h
 
 # split in vertical orientation
 bindsym $mod+v split v
