--- a/.config/mpv/input.conf
+++ b/.config/mpv/input.conf
@@ -21,6 +21,7 @@
 # │ Screen Mods    │ add (contrast)(brightness)(gamma)(saturation) │                                                                                             │
 # └────────────────┴───────────────────────────────────────────────┴─────────────────────────────────────────────────────────────────────────────────────────────┘
 
+# also 0 and 9
 UP add volume +2
 DOWN add volume -2
 
@@ -37,7 +38,11 @@ k cycle pause
 t frame-step
 Shift+t frame-back-step
 
+# cycle video aspect ratios; "-1" is the container aspect
+A cycle-values video-aspect-override "16:9" "4:3" "2.35:1" "-1"
 
+# progress
+#o show-progress
 
 # yeah i stole this!
 # https://github.com/mpv-player/mpv/blob/master/etc/input.conf
@@ -188,8 +193,6 @@ Shift+t frame-back-step
 #w add panscan -0.1                     # zoom out with -panscan 0 -fs
 #W add panscan +0.1                     #      in
 #e add panscan +0.1                     # same as previous binding (discouraged)
-# cycle video aspect ratios; "-1" is the container aspect
-#A cycle-values video-aspect-override "16:9" "4:3" "2.35:1" "-1"
 #POWER quit
 #PLAY cycle pause
 #PAUSE cycle pause
