--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,5 +6,10 @@
 
 config_version: 2
 settings:
-  content.register_protocol_handler:
-    https://mail.google.com?extsrc=mailto&url=%25s: true
+  aliases:
+    global:
+      q: quit
+      w: session-save
+      wq: quit --save
+  content.blocking.enabled:
+    global: true
