--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -247,33 +247,63 @@ draw_bold_text_with_bright_colors: true
 #cyan:    '0x8FBCBB'
 #white:   '0xECEFF4'
 
+# Colors (Tomorrow Night Eighties)
+#colors:
+## Default colors
+#primary:
+#background: '0x151515'
+#foreground: '0xd0d0d0'
+#
+## Normal colors
+#normal:
+#black:   '0x151515'
+#red:     '0xfb9fb1'
+#green:   '0xacc267'
+#yellow:  '0xddb26f'
+#blue:    '0x6fc2ef'
+#magenta: '0xe1a3ee'
+#cyan:    '0x12cfc0'
+#white:   '0xd0d0d0'
+#
+## Bright colors
+#bright:
+#black:   '0x505050'
+#red:     '0xfb9fb1'
+#green:   '0xacc267'
+#yellow:  '0xddb26f'
+#blue:    '0x6fc2ef'
+#magenta: '0xe1a3ee'
+#cyan:    '0x12cfc0'
+#white:   '0xf5f5f5'
+
+# baskerville
 colors:
   # Default colors
   primary:
-    background: '0x151515'
-    foreground: '0xd0d0d0'
+    background: '0x000000'
+    foreground: '0xCFCDCD'
 
   # Normal colors
   normal:
-    black:   '0x151515'
-    red:     '0xfb9fb1'
-    green:   '0xacc267'
-    yellow:  '0xddb26f'
-    blue:    '0x6fc2ef'
-    magenta: '0xe1a3ee'
-    cyan:    '0x12cfc0'
-    white:   '0xd0d0d0'
+    black:   '0x5e5e5e'
+    red:     '0xff9fc9'
+    green:   '0x3bd6ff'
+    yellow:  '0xa7af01'
+    blue:    '0xd5b8ff'
+    magenta: '0xffa7f6'
+    cyan:    '0x93c9ff'
+    white:   '0xffffff'
 
   # Bright colors
   bright:
-    black:   '0x505050'
-    red:     '0xfb9fb1'
-    green:   '0xacc267'
-    yellow:  '0xddb26f'
-    blue:    '0x6fc2ef'
-    magenta: '0xe1a3ee'
-    cyan:    '0x12cfc0'
-    white:   '0xf5f5f5'
+    black:   '0x5e5e5e'
+    red:     '0xff9fc9'
+    green:   '0x3bd6ff'
+    yellow:  '0xa7af01'
+    blue:    '0xd5b8ff'
+    magenta: '0xffa7f6'
+    cyan:    '0x93c9ff'
+    white:   '0xffffff'
 
 
 # Visual Bell
