--- a/.config/i3/config
+++ b/.config/i3/config
@@ -223,12 +223,13 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 # CUSTOM ===========================================================
-# Startup
+# Startup tag:cscs
 exec_always --no-startup-id numlockx on
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id picom --experimental-backend
 exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/hcmc-what-to-see-shutterstock_362736344.jpg.1400x800_q85_crop.jpg
-exec --no-startup-id alacritty -e bash -c 'remind -@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && bash'
+exec --no-startup-id tdrop -am -w 60% -y 30% -x 20% -h 40% -n 3 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 1000'
+exec --no-startup-id alacritty
 exec --no-startup-id alacritty
 exec --no-startup-id qutebrowser
 #exec --no-startup-id alacritty -t neomutt -e neomutt
@@ -453,3 +454,4 @@ bindsym $mod+Shift+c		exec --no-startup-id tdrop -am -w 30% -y 30% -x 35% -n 0 a
 bindsym $mod+Shift+e 		exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 1 alacritty -e neomutt
 bindsym $mod+Shift+v 		exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 2 alacritty -e nvim -c VimwikiIndex
 bindsym $mod+Shift+a 		exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 3 alacritty
+bindsym $mod+Shift+p 		exec --no-startup-id tdrop -am -w 60% -y 30% -x 20% -h 40% -n 3 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 1000'
