--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,7 +6,12 @@
 
 config_version: 2
 settings:
-  statusbar.show:
-    global: never
-  tabs.show:
-    global: always
+  aliases:
+    global:
+      q: quit
+      w: session-save
+      wq: quit --save
+  content.blocking.enabled:
+    global: true
+  content.notifications.enabled:
+    https://www.netflix.com: false
