--- a/.config/i3/config
+++ b/.config/i3/config
@@ -211,7 +211,7 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id numlockx on
 exec_always --no-startup-id autotiling
 exec_always --no-startup-id picom --experimental-backend
-exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/611702-taxi-rain-street-bokeh-car-water-macro-blurred-cityscape.jpg
+exec_always --no-startup-id feh --bg-fill /home/mark/Downloads/Really-Cool-Wallpapers-HD.jpg
 exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 3 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 10'
 exec --no-startup-id alacritty
 #exec --no-startup-id qutebrowser; workspace $ws2
@@ -244,7 +244,8 @@ assign [title="neomutt"] $ws3
 set $bgcolor    #00897b33
 set $ibgcolor   #363636
 set $fws		#000000
-set $barcolor 	#151515bf # chalk
+set $barcolor   #1b2b34bf # oceanic
+#set $barcolor 	#151515bf # chalk
 #set $barcolor	#2E3440bf # nord
 set $textcolor  #ffffff  
 set $itextcolor #969696
