--- a/.config/i3/config
+++ b/.config/i3/config
@@ -437,7 +437,7 @@ bindsym $mod+BackSpace		exec --no-startup-id bash ~/.local/bin/flash-win
 bindsym $mod+Shift+c		exec --no-startup-id tdrop -am -w 30% -y 30% -x 35% -n 0 alacritty -e R -q --vanilla
 bindsym $mod+Shift+e 		exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 1 alacritty -e neomutt
 bindsym $mod+Shift+v 		exec --no-startup-id tdrop -am -w 40% -y 20% -x 30% -h 60% -n 2 alacritty -e nvim -c VimwikiIndex
-bindsym $mod+Shift+p 		exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 3 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 1000'
+bindsym $mod+Shift+p 		exec --no-startup-id tdrop -am -w 60% -y 25% -x 20% -h 50% -n 3 alacritty -e bash -c 'remind -cl+2m@ ~/p-dot-script/remind.rem *5 && echo -e "\n" && sleep 100000000000'
 #bindsym $mod+Shift+q 		exec --no-startup-id tdrop -am -w 98% -y 4% -x 1% -h 95% -n 4 qutebrowser
 bindsym $mod+p 				exec --no-startup-id tdrop -am -w 70% -y 10% -x 15% -h 80% -n 8 pcmanfm
 
