--- a/.config/qutebrowser/autoconfig.yml
+++ b/.config/qutebrowser/autoconfig.yml
@@ -6,5 +6,7 @@
 
 config_version: 2
 settings:
-  content.notifications.enabled:
-    https://www.us.hsbc.com: true
+  statusbar.show:
+    global: always
+  tabs.show:
+    global: always
