--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -43,6 +43,12 @@ markup=none
 #interval=1
 #color=#f5af19
 
+[mail]
+label= 
+command=$SCRIPT_DIR/mail
+interval=180
+signal=12
+
 [i3-focusedwindow]
 #label=[]= 
 command=$SCRIPT_DIR/i3-focusedwindow 20
