--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -43,12 +43,6 @@ markup=none
 #interval=1
 #color=#f5af19
 
-[mail]
-label= 
-command=$SCRIPT_DIR/mail
-interval=180
-signal=12
-
 [i3-focusedwindow]
 #label=[]= 
 command=$SCRIPT_DIR/i3-focusedwindow 20
@@ -83,13 +77,13 @@ WIDTH=1
 
 [memory]
 command=$SCRIPT_DIR/memory
-label= 
+label= 
 interval=30
 
 [cpu_usage]
 command=$SCRIPT_DIR/cpu_usage
 interval=10
-LABEL=  
+LABEL= 
 #min_width=CPU: 100.00%
 #T_WARN=50
 #T_CRIT=80
@@ -169,6 +163,13 @@ PLAY_LABEL=(playing)
 PAUSE_LABEL=(paused)
 TIMER_LOOP=true
 NEUTRAL_COLOR=#151515bf
+
+[mail]
+label= 
+command=$SCRIPT_DIR/mail
+interval=180
+signal=12
+color=#0002b3
 
 [calendar]
 command=$SCRIPT_DIR/calendar
