--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -167,9 +167,8 @@ NEUTRAL_COLOR=#151515bf
 [mail]
 label= 
 command=$SCRIPT_DIR/mail
-interval=180
-signal=12
-color=#0002b3
+#interval=180
+#signal=12
 
 [calendar]
 command=$SCRIPT_DIR/calendar
