--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -165,9 +165,10 @@ TIMER_LOOP=true
 NEUTRAL_COLOR=#151515bf
 
 [mail]
-label= 
+#label= 
+markup=pango
 command=$SCRIPT_DIR/mail
-#interval=180
+interval=150
 #signal=12
 
 [calendar]
