--- a/.config/i3blocks/i3blocks.conf
+++ b/.config/i3blocks/i3blocks.conf
@@ -22,9 +22,14 @@
 # signal
 # urgent
 
+###########################################
+# GOOD RESOURCE FOR GOOGLE EMOJIS
+# https://emojipedia.org/search/?q=keyboard
+###########################################
+
 # Global properties
 separator=false
-separator_block_width=15
+separator_block_width=12
 markup=none
 
 #[documentation]
@@ -44,13 +49,13 @@ markup=none
 #color=#f5af19
 
 [i3-focusedwindow]
-#label=[]= 
+label=📂 
 command=$SCRIPT_DIR/i3-focusedwindow 20
 interval=persist
 
 [disk]
 command=$SCRIPT_DIR/disk
-LABEL= 
+LABEL=💽 
 #DIR=$HOME
 #ALERT_LOW=10
 interval=30
@@ -77,7 +82,7 @@ WIDTH=1
 
 [memory]
 command=$SCRIPT_DIR/memory
-label= 
+label=🧠 
 interval=30
 
 [cpu_usage]
@@ -91,7 +96,7 @@ LABEL=
 
 [temperature]
 command=$SCRIPT_DIR/temperature
-label= 
+label=🌡 
 interval=10
 #T_WARN=70
 #T_CRIT=90
@@ -102,13 +107,13 @@ color=#ffffff
 command=$SCRIPT_DIR/arch-update
 interval=3600
 markup=pango
-LABEL= 
+LABEL=☑️ 
 BASE_COLOR=#5fff5f
 UPDATE_COLOR=#FFF600
 
 [wifi]
 command=$SCRIPT_DIR/wifi
-label= 
+label=📡 
 INTERFACE=wlo1
 interval=60
 
@@ -116,19 +121,19 @@ interval=60
 command=$SCRIPT_DIR/bandwidth
 interval=5
 INTERFACE=enp3s0
-INLABEL= 
-OUTLABEL= 
+INLABEL=⬇️ 
+OUTLABEL=⬆️ 
 #TREAT_UNKNOWN_AS_UP=0
 
 [eyedropper]
 command=$SCRIPT_DIR/eyedropper
-full_text=<span foreground="#ffffff"></span>
+full_text=<span foreground="#ffffff">💧</span>
 instance=#ffffff
 markup=pango
 
 [volume]
 command=$SCRIPT_DIR/volume
-LABEL= 
+LABEL=🔊 
 interval=once
 signal=10
 #STEP=5%
@@ -142,8 +147,8 @@ KEY=NUM
 markup=pango
 interval=once
 signal=11
-#TEXT_ON=NumLockOn
-#TEXT_OFF=NumLockOff
+TEXT_ON=⌨️ Num
+#TEXT_OFF=
 #COLOR_ON=#FFFFFF
 #HIDE_WHEN_OFF=1
 
@@ -153,8 +158,8 @@ signal=11
 command=$SCRIPT_DIR/timer_and_stopwatch
 format=json
 interval=1
-TIMER_LABEL=TM
-STOPWATCH_LABEL=SW
+TIMER_LABEL=⏳
+STOPWATCH_LABEL=⏱️
 DEFAULT_MODE=timer
 DEFAULT_STOPWATCH=0
 # 2280 = 38m for laundry
@@ -165,7 +170,6 @@ TIMER_LOOP=true
 NEUTRAL_COLOR=#151515bf
 
 [mail]
-#label= 
 markup=pango
 command=$SCRIPT_DIR/mail
 interval=150
@@ -174,7 +178,7 @@ interval=150
 [calendar]
 command=$SCRIPT_DIR/calendar
 interval=1
-LABEL= 
+LABEL=📆 
 DATEFMT=+%b %d %H:%M:%S  
 # SHORTFMT=+%H:%M:%S
 HEIGHT=-10
